# multi-taxi

./: .gitignore  CITATION.cff  LICENSE.txt  MANIFEST.in  MultiTaxiEnvDemo.ipynb  MultiTaxiEnvDoc.ipynb  README.md  env_creator.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
MultiTaxiLib/: config.py  taxi_environment.py
MultiTaxiLib/taxi_utils/: __init__.py  actions_utils.py  basic_utils.py  observation_utils.py  rendering_utils.py  reward_utils.py  termination_utils.py
MultiTaxiLib/visualizations/: streamlit_game.py
multi_taxi/: __init__.py  config.py  taxi_environment.py  utils.py
multi_taxi/env/: MultiTaxiEnv.py  config.py  multi_taxi_v0.py  reward_tables.py  single_taxi_v0.py  state.py
multi_taxi/taxi_utils/: actions_utils.py  observation_utils.py  rendering_utils.py  reward_utils.py  termination_utils.py
multi_taxi/utils/: images.py  stochastic_action_function.py  types.py
multi_taxi/utils/ansitoimg/: __init__.py  ansirep.py  rendering.py  theme.py  utils.py
multi_taxi/visualizations/: streamlit_game.py
multi_taxi/world/: domain_map.py  entities.py  maps.py
multi_taxi/wrappers/: __init__.py  assert_out_of_bounds_parallel.py  fixed_locations.py  order_enforcing_parallel.py  single_agent.py
notebooks/: MultiTaxiEnvDemo.ipynb
runner/: runner.py
runner/algorithms/: algo_creator.py  dqn.py  ppo.py
runner/envs/: cityLearn.py  env_creator.py  multi_taxi.py
runner/envs/city_learn/: cityLearn.py
runner/envs/city_learn/data/: all_data.xlsx  schema.json
runner/envs/city_learn/notebooks/: NOGA_SmartGrid_with_CityLearn_DataAnalysis.ipynb  NOGA_SmartGrid_with_CityLearn_Environment.ipynb  NOGA_SmartGrid_with_CityLearn_Simulation.ipynb  battery_physical_model.ipynb  brute_force_agent__evaluation_experiment_analysis.ipynb  brute_force_last_agent__evaluation_experiment_analysis.ipynb  carbon_fit.ipynb  carbon_statistical_analysis.ipynb  generate_data_for_inst_u.ipynb  generate_data_for_inst_u_last_agent.ipynb  net_consumption_analysis.ipynb  net_consumption_district_mdpe.ipynb  net_consumption_dot_product.ipynb  net_consumption_loss_review.ipynb  rule_based_agent_analysis.ipynb  smart_grid_project.ipynb
runner/envs/city_learn/problem/: SuperProblem.py
runner/envs/city_learn/problem/CityLearn/: CityProblem.py  CityState.py  kpi.py  kpi__.py  reward.py
tests/: common.py  test_actions.py  test_env_configs.json  test_extra_api.py  test_functionality.py  test_gym_api.py  test_observation_spaces.py  test_observations.py  test_pettingzoo_api.py  test_search.py  test_taxi_environment.py
