[metadata]
name = multi_taxi
version = 0.2.0
author = Sarah Keren
author_email = sarahk@technion.ac.il
description = A multi-agent adaptation of the OpenAI gym taxi environment https://gym.openai.com/envs/Taxi-v3/
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarah-keren/multi_taxi
keywords = AI, RL, planning, environment, multi-agent
classifiers =
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'
    'Programming Language :: Python :: Implementation :: CPython'
    'Programming Language :: Python :: Implementation :: PyPy'

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pettingzoo==1.18.1
    pillow

[options.package_data]
multi_taxi.utils.ansitoimg = resources/*

[options.packages.find]
exclude =
    tests
    images

[options.extras_require]
dev = pytest